[gd_scene load_steps=8 format=3 uid="uid://8qkskt1u6msb"]

[ext_resource type="Texture2D" uid="uid://b50wpbkf2bhv4" path="res://assets/airplane/supplies.png" id="1_7jdte"]
[ext_resource type="Script" path="res://scripts/supplies.gd" id="1_13r2e"]
[ext_resource type="AudioStream" uid="uid://qj27w1082c0r" path="res://assets/sfx/supplies_dropped.ogg" id="3_tbwhl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h868s"]
size = Vector2(107, 80)

[sub_resource type="Animation" id="Animation_jdkth"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.349066]
}

[sub_resource type="Animation" id="Animation_0dxtv"]
resource_name = "rotation"
length = 3.9
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 4
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.010417, 1.00625, 2.00625, 3.00625, 3.93333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [-0.349066, 0.0, 0.349066, 0.0, -0.331613]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h3fa6"]
_data = {
"RESET": SubResource("Animation_jdkth"),
"rotation": SubResource("Animation_0dxtv")
}

[node name="Supplies" type="Area2D"]
position = Vector2(0, 50)
rotation = -0.349066
scale = Vector2(0.4, 0.4)
collision_layer = 16
collision_mask = 4
script = ExtResource("1_13r2e")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_7jdte")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0.499996, 7.62939e-06)
scale = Vector2(8.65, 15.3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2.5, 112)
shape = SubResource("RectangleShape2D_h868s")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_h3fa6")
}
autoplay = "rotation"

[node name="SFX_SuppliesDropped" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_tbwhl")
bus = &"sfx"

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
